<resources>
    <string name="app_name">Hunger Warrior Vendor</string>
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="food_price">Food Price</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="foods">Foods</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>

    <string name="facebook_application_id">639307274060869</string>
    <string name="fb_login_protocol_scheme">fb639307274060869</string>
    <string name="facebook_client_token">e8087bb0f85dca2b7725add5607a8002</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="image_of_food">Image of food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_name">Customer Name</string>
    <string name="total">Total:</string>
    <string name="_15">15</string>
    <string name="order_time">Order Time</string>
    <string name="order_id">Order id: #</string>
    <string name="qty">Qty</string>
    <string name="reject">reject</string>
    <string name="accept">Accept</string>
    <string name="pending">Pending</string>
    <string name="preparing">Preparing</string>
    <string name="completed">Completed</string>
    <string name="x">x</string>
    <string name="status">Status</string>

    <string-array name="status_labels_array">
        <item>pending</item>
        <item>preparing</item>
        <item>completed</item>
        <item>cancelled</item>
    </string-array>

</resources>