<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_Order_label_Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/textView_Order_Total"
                android:text="@string/total"
                android:textSize="@dimen/textSizeSubtitle"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_Order_Total"
                app:layout_constraintEnd_toStartOf="@+id/textView_Order_Total" />

            <TextView
                android:id="@+id/textView_Order_Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_15"
                android:textSize="@dimen/textSizeSubtitle"
                app:layout_constraintEnd_toEndOf="@+id/textView_Order_OrderId"
                app:layout_constraintTop_toBottomOf="@+id/textView_Order_OrderId" />

            <TextView
                android:id="@+id/textView_Order_customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/customer_name"
                android:text="@string/customer_name"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_time"
                app:layout_constraintStart_toStartOf="@+id/textView_Order_customer_name"
                app:layout_constraintTop_toBottomOf="@+id/textView_Order_customer_name" />

            <TextView
                android:id="@+id/textView_Order_label_OrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/textView_Order_OrderId"
                android:text="@string/order_id"
                android:textSize="@dimen/textSizeSubtitle"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_Order_customer_name"
                app:layout_constraintEnd_toStartOf="@+id/textView_Order_OrderId" />

            <TextView
                android:id="@+id/textView_Order_OrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/_15"
                android:textSize="@dimen/textSizeSubtitle"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_Order_label_OrderId"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_orderItems"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textView_Order_Total"
                app:layout_constraintStart_toStartOf="@+id/textView_Order_customer_name"
                app:layout_constraintTop_toBottomOf="@+id/textView_Order_label_Total"
                tools:listitem="@layout/orderitem_row_item" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="reject"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_orderItems" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accept"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>